Added three typesets

--- a/fonts.html
+++ b/fonts.html
@@ -7,7 +7,9 @@
 	<meta charset="UTF-8">
 	
 	<title>Changing the Typeset</title>
-	<link rel="stylesheet" type="text/css" href="fonts.css"> 
+	<link rel="stylesheet" type="text/css" href="fonts.css">
+	<link href='https://fonts.googleapis.com/css?family=Slabo+27px|Montserrat:400,700|Ubuntu' rel='stylesheet' type='text/css'>
+
 
 </head>
 <body>
@@ -16,17 +18,17 @@
 	<hr>
 	<h3>Here are a few things I've thought about</h3>
 
-	<h4>Thought Blurb 1:</h4>
+	<h4>Thought Blurb 1, composed in Slabo Typeset:</h4>
 	<p><div class="bold">
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae?
 	</div></p>
 		
-	<h4>Thought Blurb 2:</h4>
+	<h4>Thought Blurb 2, in Montserrat typeset:</h4>
 	<p> <div class="twentyfour"> <!-- Add a class here! Enlarge the font to 24px -->
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae?
 	</div></p>
 
-	<h4>Thought Blurb 3:</h4>
+	<h4>Thought Blurb 3, in Ubuntu typeset:</h4>
 	<p> <div class="linefifty"> <!-- Add a class here! Increase the line height to 50px -->
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae?
 	</div></p>
